--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
         </header>
 
         <!-- Login Form -->
-        <div class="hero bg-base-200 ">
+        <div class="">
             <div class="hero-content flex-col lg:flex-row-reverse">
                 
                 <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-                    <div class="card-body">
+                    <form class="card-body">
                         <fieldset class="fieldset">
-                            <label class="label">Account Number</label>
-                            <input type="number" class="input" placeholder="Account Number" />
+                            <label class="">Account Number</label>
+                            <input type="number" class="input" placeholder="Account Number" required />
                             <label class="label">Pin</label>
-                            <input type="text" class="input" placeholder="Pin" />
+                            <input type="text" class="input" placeholder="Pin" required />
                             <div><a class="link link-hover">Forgot password?</a></div>
-                            <button class="btn btn-neutral mt-4">Login</button>
+                            <button id="login-btn" class="btn btn-neutral mt-4">Login</button>
                         </fieldset>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
