--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         <!-- Login Form -->
         <div class="">
             <div class="hero-content flex-col lg:flex-row-reverse">
-                
+
                 <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                         <fieldset class="fieldset">
                             <label class="">Account Number</label>
-                            <input type="number" class="input" placeholder="Account Number" required />
+                            <input id="input-account-number" value="01234567891" type="number" class="input"
+                                placeholder="Account Number" required />
                             <label class="label">Pin</label>
-                            <input type="text" class="input" placeholder="Pin" required />
+                            <input id="input-pin-number" value="1234"        type="text" class="input" placeholder="Pin" required />
                             <div><a class="link link-hover">Forgot password?</a></div>
                             <button id="login-btn" class="btn btn-neutral mt-4">Login</button>
                         </fieldset>
