Cash Withdraw toggle functionality done

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             <nav class="flex justify-around items-center">
                 <img class="w-16" src="./assets/Group.png" alt="">
                 <div>
-                    <h1 class="text-3xl font-bold">$ 4500</h1>
+                    <h1 class="text-3xl font-bold">$ <span id="existing-amount">4500</span> </h1>
                     <p class="border rounded p-1 ">Available Balance</p>
                 </div>
                 <button class="btn">logout</button>
@@ -27,7 +27,7 @@
                     within shortest time and securely. Because We care about your Money.
                 </p>
                 <div class="cards cursor-pointer grid grid-cols-3 mt-14 gap-4 p-3">
-                    <div class="box border p-4 text-center rounded-sm">
+                    <div id="add-money-likebtn" class="box border p-4 text-center rounded-sm">
                         <img class="w-8 mx-auto" src="./assets/purse1.png" alt="">
                         <h3>Add money</h3>
                     </div>
@@ -47,14 +47,15 @@
                         <img class="w-8 mx-auto" src="./assets/money1.png" alt="">
                         <h3>Display Balance</h3>
                     </div>
-                    <div class="box border p-4 text-center rounded-sm">
+                    <div id="Cash-withdraw-likebtn"  class="box border p-4 text-center rounded-sm">
                         <img class="w-8 mx-auto" src="./assets/purse1.png" alt="">
                         <h3>Cash Withdraw</h3>
                     </div>
 
                 </div>
-                <section>
-                    <h2>Add Money</h2>
+                <!-- Add Money Section -->
+                <section id="add-money">
+                    <h2 class="text-3xl font-extrabold text-center">Add Money</h2>
 
                     <div class="hero-content flex-col lg:flex-row-reverse">
                         <div class="text-center lg:text-left">
@@ -63,7 +64,7 @@
                                 <div class="card-body">
                                     <legend>Select Bank</legend>
                                     <select class="select">
-                                        <option disabled selected>Pick a color</option>
+                                        <option disabled selected>Select Your Bank</option>
                                         <option>NatWest</option>
                                         <option>LLoyds Bank</option>
                                         <option>Barclays</option>
@@ -72,10 +73,26 @@
                                         <label class="">Account Number</label>
                                         <input id="input-account-number" value="01234567891" type="number" class="input"
                                             placeholder="Account Number" required />
+
+
                                         <label class="label">Pin</label>
-                                        <input id="input-pin-number" value="1234"        type="text" class="input" placeholder="Pin" required />
+                                        <input id="input-pin-number" value="1234" type="text" class="input"
+                                            placeholder="Pin" required />
+
+
+                                        <label class="label">Amount Number</label>
+                                        <input id="amount" type="text" class="input"
+                                            placeholder=" Type Amount Number" required />
+
+
                                         <div><a class="link link-hover">Forgot password?</a></div>
-                                        <button id="login-btn" class="btn btn-neutral mt-4">Add Money</button>
+
+
+                                        <button id="add-money-btn" class="btn rounded ">Add Money</button>
+
+
+                                      
+
                                     </fieldset>
                                 </div>
                             </div>
@@ -84,9 +101,54 @@
 
                 </section>
 
+                <!-- Money Withdraw Section -->
+                 <section id="cashout">
+                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                        <div class="card-body">
+                            <h2 class="text-3xl font-bold">Withdraw Cash</h2>
+                            <legend>Select Bank</legend>
+                                    <select class="select">
+                                        <option disabled selected>Select Your Bank</option>
+                                        <option>NatWest</option>
+                                        <option>LLoyds Bank</option>
+                                        <option>Barclays</option>
+                                    </select>
+                            <fieldset class="fieldset">
+                                <label class="">Account Number</label>
+                                <input id="input-account-number" value="01234567891" type="number" class="input"
+                                    placeholder="Account Number" required />
+
+
+                                <label class="label">Pin</label>
+                                <input id="input-pin-number" value="1234" type="text" class="input"
+                                    placeholder="Pin" required />
+
+
+                                <label class="label">Amount Number</label>
+                                <input id="amount" type="text" class="input"
+                                    placeholder=" Type Amount Number" required />
+
+
+                                <div><a class="link link-hover">Forgot password?</a></div>
+
+
+                                <button id="add-money-btn" class="btn rounded ">Cash Withdraw</button>
+
+
+                              
+
+                            </fieldset>
+                        </div>
+                    </div>
+
+
+                 </section>
+
             </section>
         </header>
     </section>
+    <script src="./script/addmoney.js"></script>
+    <script src="./script/toggle.js"></script>
 </body>
 
 </html>
