Till withdraw cash done

--- a/main.html
+++ b/main.html
@@ -120,19 +120,19 @@
 
 
                                 <label class="label">Pin</label>
-                                <input id="input-pin-number" value="1234" type="text" class="input"
+                                <input id="input-pin-cashout" value="1234" type="text" class="input"
                                     placeholder="Pin" required />
 
 
                                 <label class="label">Amount Number</label>
-                                <input id="amount" type="text" class="input"
+                                <input id="amount-cashout" type="text" class="input"
                                     placeholder=" Type Amount Number" required />
 
 
                                 <div><a class="link link-hover">Forgot password?</a></div>
 
 
-                                <button id="add-money-btn" class="btn rounded ">Cash Withdraw</button>
+                                <button id="cash-withdraw-btn" class="btn rounded ">Cash Withdraw</button>
 
 
                               
@@ -149,6 +149,7 @@
     </section>
     <script src="./script/addmoney.js"></script>
     <script src="./script/toggle.js"></script>
+    <script src="./script/cashout.js"></script>
 </body>
 
 </html>
